# jacques-flu

./: README.md  pyproject.toml
.github/workflows/: pythonapp-workflow.yml
requirements/: requirements-dev.txt  requirements.txt
src/jacques_flu/: app.py  jacques_flu_demo.ipynb
src/jacques_flu/util/: logs.py
tests/jacques_flu/: test_app.py
tests/jacques_flu/unit/util/: test_date.py
